# guardrailbackend

./: .env.example  Cargo.toml  test_pending_redemptions.sh
docs/: nigeria-agriculture-admin-asset-seeds.json  nigeria-commodities-admin-asset-seeds.json  nigeria-real-estate-admin-asset-seeds.json
migrations/: 202604280001_create_compliance_module_tables.sql  202604280002_create_asset_treasury_oracle_tables.sql  202605040001_add_asset_catalog_search_indexes.sql  202605050001_create_user_trade_history.sql  202605060001_add_treasury_redemption_fields.sql  202605060002_assets_on_update_cascade.sql  202605070001_create_asset_requests.sql
scripts/: curl_smoke_contract_modules.sh  process_redemptions.sh  seed_agriculture_assets.sh  seed_realestate_assets.sh
src/: app.rs  main.rs
src/config/: db.rs  environment.rs
src/middleware/: admin.rs
src/module/: mod.rs
src/module/admin/: controller.rs  route.rs  schema.rs
src/module/asset/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/module/asset_request/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/module/auth/: controller.rs  crud.rs  error.rs  model.rs  route.rs  schema.rs
src/module/compliance/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/module/faucet/: controller.rs  schema.rs
src/module/market/: controller.rs  route.rs  schema.rs
src/module/oracle/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/module/treasury/: controller.rs  (+4 more)
src/service/: aa.rs  asset_request.rs  auth.rs  browser.rs  chain.rs  faucet.rs  governance.rs  market.rs  mod.rs  rpc.rs
(+46 files in other folders)
