[package]
name = "guardrailbackend"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
default-run = "guardrailbackend"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
ethers-contract = "2.0.14"
ethers-core = "2.0.14"
ethers-middleware = "2.0.14"
ethers-providers = "2.0.14"
ethers-signers = "2.0.14"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.16"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
